--- a/css/jquery.filebrowser.css
+++ b/css/jquery.filebrowser.css
@@ -5,7 +5,7 @@
  * Copyright (c) 2016-2017 Jakub Jankiewicz <http://jcubic.pl/me>
  * Released under the MIT license
  *
- * Date: Sun, 03 Sep 2017 16:10:22 +0000
+ * Date: Wed, 06 Sep 2017 07:27:03 +0000
  */
 .browser-widget.hidden, .browser-widget .hidden {
     visibility: hidden;
@@ -15,9 +15,10 @@
     margin: 0;
     padding: 0;
 }
-.browser-widget ul.ui-menu {
+.browser-menu {
     float: left;
     position: absolute;
+    z-index: 99999999;
 }
 .browser-widget li[draggable] {
   /* Required to make elements draggable in old WebKit */
